# schema-validator

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  README.md  publish.sh  pyproject.toml
.github/: FUNDING.yml
example/: example_1.py
flask_dantic_schema/: __init__.py  extension.py  validation.py
schema_validator/: __init__.py  command.py  constants.py  core.py  extension.py  mixins.py  types.py  typing.py  utils.py  validation.py
schema_validator/flask/: api.py  validation.py
schema_validator/quart/: __init__.py  api.py  validation.py
tests/: test_basic.py  test_casing.py  test_testing.py  test_validation.py
tests/flask/: test_casing.py  test_testing.py  test_validation.py
tests/quart/: test_casing.py  test_testing.py  test_validation.py
